--- a/styles/main.css
+++ b/styles/main.css
@@ -125,6 +125,7 @@ button:focus {
 }
 
 /* base */
+
 /* header */
 .select.is-active .select__body {
     display: none;
@@ -212,10 +213,36 @@ button:focus {
 
 /* header */
 
+/* auto-scroll */
+.slider {
+    overflow: hidden;
+}
+
+.swiper-slide {
+    width: auto;
+    margin-right: 10px !important;
+}
+
+.slider__item {
+    padding: 20px 10px;
+    text-align: center;
+    background: #262A35;
+    border-radius: 10px;
+    max-width: 225px !important;
+    min-width: 70px !important;
+}
+
+.swiper-wrapper {
+    transition-timing-function: linear;
+}
+
+/* auto-scroll */
+
 /* bull-terrier */
 .bull-terrier {
     margin: 175px 0 160px;
 }
+
 .desk-general {
     background: rgba(229, 229, 229, 0.1);
     box-shadow: inset 4px 0px 0px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(255, 255, 255, 0.15),
@@ -226,6 +253,7 @@ button:focus {
     max-width: 1055px;
     padding: 95px 0;
 }
+
 .desk-general-text {
     font-family: "Uni Neue";
     font-style: normal;
@@ -235,22 +263,26 @@ button:focus {
     color: #ffffff;
     max-width: 900px;
 }
+
 .paw-l {
     left: -6px;
     top: 50%;
     transform: translateY(-50%);
 }
+
 .paw-r {
     right: 0;
     top: 50%;
     transform: translateY(-50%);
 }
+
 .paw-block {
     background-image: url(../img/3-bull-terrier/bull-terrier-fon.png);
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 90px;
 }
+
 .paw-text {
     font-family: "Uni Neue";
     font-style: normal;
@@ -260,6 +292,7 @@ button:focus {
     color: #ffffff;
     max-width: 1055px;
 }
+
 /* bull-terrier */
 
 /* bagel */
@@ -272,9 +305,11 @@ button:focus {
     color: #ffffff;
     margin-bottom: 105px;
 }
+
 .bagel {
     margin-bottom: 230px;
 }
+
 .bagel-description-text {
     font-family: "Uni Neue";
     font-style: normal;
@@ -284,6 +319,7 @@ button:focus {
     color: #ffffff;
     max-width: 870px;
 }
+
 .bagel-description {
     background: rgba(229, 229, 229, 0.1);
     box-shadow: inset 4px 0px 0px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(255, 255, 255, 0.15),
@@ -295,11 +331,13 @@ button:focus {
     max-width: 1510px;
     margin-bottom: 135px;
 }
+
 .bagel-description img {
     left: -82px;
     top: 50%;
     transform: translateY(-50%);
 }
+
 .btn-paw {
     font-family: "Uni Neue";
     font-style: normal;
@@ -317,6 +355,7 @@ button:focus {
     border-radius: 20px;
     position: relative;
 }
+
 .btn-paw::before {
     position: absolute;
     right: -80px;
@@ -327,15 +366,18 @@ button:focus {
     height: 75px;
     background-image: url(../img/4-bagel/bagel-decor-btn.png);
 }
+
 /* bagel */
 
 /* collection */
 .collection {
     padding-bottom: 160px;
 }
+
 .collection-img {
     margin-bottom: 160px;
 }
+
 .collection-text {
     font-family: "Uni Neue Book";
     font-style: normal;
@@ -345,9 +387,11 @@ button:focus {
     color: #ffffff;
     max-width: 855px;
 }
+
 .collection-info {
     margin-bottom: 234px;
 }
+
 /* collection */
 
 /* modal */
@@ -358,6 +402,7 @@ button:focus {
     border-radius: 20px;
     padding: 105px 70px 60px;
 }
+
 .modal-header {
     border-bottom: none !important;
     background: rgba(229, 229, 229, 0.1);
@@ -366,9 +411,11 @@ button:focus {
     border-radius: 20px;
     padding: 0 !important;
 }
+
 .modal-dialog {
     max-width: 1470px;
 }
+
 .btn-close {
     background-image: url(../img/6-modal/close.png);
     background-size: 53px;
@@ -378,9 +425,11 @@ button:focus {
     margin-right: 80px !important;
     margin-top: 35px !important;
 }
+
 .modal-img-block {
     margin-bottom: 75px;
 }
+
 .modal-description {
     max-width: 1035px;
     font-family: "Uni Neue";
@@ -390,7 +439,9 @@ button:focus {
     line-height: 41px;
     color: #ffffff;
 }
+
 .modal-description-block {
     padding: 0 140px 100px;
 }
+
 /* modal */
